--- a/src/pages/cart/index.astro
+++ b/src/pages/cart/index.astro
@@ -1,5 +1,6 @@
 ---
 import WebsiteLayout from "@/layouts/websiteLayout.astro";
+import LazyImage from "@/components/shared/LazyImage.astro";
 import { getProducts, getProductImages } from "@/lib/database";
 import { getProductPlaceholderImage } from "@/lib/image-utils";
 
@@ -178,7 +179,7 @@ const formatPrice = (price: number): string => {
                   class="block flex-shrink-0"
                 >
                   <div class="w-full h-80 overflow-hidden rounded-lg bg-muted">
-                    <img
+                    <LazyImage
                       src={
                         product.imageUrl ||
                         getProductPlaceholderImage(product.category)
